crates/solidity/testing/snapshots/bindings_output/yul/constant_access_from_functions/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:27:1]
    │
 27 │ uint256 constant TOP_LEVEL_CONST = 0;
    │ ───────────────────┬──────────────────  
    │                    ╰──────────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract InContracts {
    │          ─────┬─────  
    │               ╰─────── name: 1
  2 │     uint256 private constant CONTRACT_CONST = 1;
    │                              ───────┬──────  
    │                                     ╰──────── name: 2
    │ 
  4 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 3
    │ 
  6 │             function swap(emptyPtr) {
    │                      ──┬─ ────┬───  
    │                        ╰──────────── name: 4
    │                               │     
    │                               ╰───── name: 5
  7 │                 mstore(emptyPtr, CONTRACT_CONST)
    │                 ───┬── ────┬───  ───────┬──────  
    │                    ╰───────────────────────────── ref: built-in
    │                            │            │        
    │                            ╰───────────────────── ref: 5
    │                                         │        
    │                                         ╰──────── ref: 2
  8 │                 mstore(emptyPtr, TOP_LEVEL_CONST)
    │                 ───┬── ────┬───  ───────┬───────  
    │                    ╰────────────────────────────── ref: built-in
    │                            │            │         
    │                            ╰────────────────────── ref: 5
    │                                         │         
    │                                         ╰───────── unresolved
    │ 
 14 │ library InLibraries {
    │         ─────┬─────  
    │              ╰─────── name: 6
 15 │     uint256 private constant LIB_CONST = 2;
    │                              ────┬────  
    │                                  ╰────── name: 7
    │ 
 17 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 8
    │ 
 19 │             function swap(emptyPtr) {
    │                      ──┬─ ────┬───  
    │                        ╰──────────── name: 9
    │                               │     
    │                               ╰───── name: 10
 20 │                 mstore(emptyPtr, LIB_CONST)
    │                 ───┬── ────┬───  ────┬────  
    │                    ╰──────────────────────── ref: built-in
    │                            │         │      
    │                            ╰──────────────── ref: 10
    │                                      │      
    │                                      ╰────── ref: 7
 21 │                 mstore(emptyPtr, TOP_LEVEL_CONST)
    │                 ───┬── ────┬───  ───────┬───────  
    │                    ╰────────────────────────────── ref: built-in
    │                            │            │         
    │                            ╰────────────────────── ref: 10
    │                                         │         
    │                                         ╰───────── unresolved
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───────────▶ contract InContracts {
  2 │ │   │             uint256 private constant CONTRACT_CONST = 1;
    │ │   │         ────────────────────────┬────────────────────────  
    │ │   │                                 ╰────────────────────────── definiens: 2
  3 │ │   ╭───────▶ 
    ┆ ┆   ┆         
  6 │ │   │   ╭───▶             function swap(emptyPtr) {
    │ │   │   │                               ────┬───  
    │ │   │   │                                   ╰───── definiens: 5
    ┆ ┆   ┆   ┆     
  9 │ │   │   ├───▶             }
    │ │   │   │                     
    │ │   │   ╰───────────────────── definiens: 4
    ┆ ┆   ┆         
 11 │ │   ├───────▶     }
    │ │   │                 
    │ │   ╰───────────────── definiens: 3
 12 │ ├─│ ────────▶ }
    │ │ │               
    │ ╰───────────────── definiens: 1
 13 │   ╭─────────▶ 
    ┆   ┆           
 15 │   │   │           uint256 private constant LIB_CONST = 2;
    │   │   │       ──────────────────────┬─────────────────────  
    │   │   │                             ╰─────────────────────── definiens: 7
 16 │   │   ╭─────▶ 
    ┆   ┆   ┆       
 19 │   │   │   ╭─▶             function swap(emptyPtr) {
    │   │   │   │                             ────┬───  
    │   │   │   │                                 ╰───── definiens: 10
    ┆   ┆   ┆   ┆   
 22 │   │   │   ├─▶             }
    │   │   │   │                   
    │   │   │   ╰─────────────────── definiens: 9
    ┆   ┆   ┆       
 24 │   │   ├─────▶     }
    │   │   │               
    │   │   ╰─────────────── definiens: 8
 25 │   ├─────────▶ }
    │   │               
    │   ╰─────────────── definiens: 6
────╯
